--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "jest": "^28.1.0",
     "luxon": "^2.3.0",
+    "msw": "^0.40.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
